--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 h1 {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 
 form {
@@ -26,7 +26,7 @@ form {
 }
 
 label {
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 10px;
 }
 
@@ -42,7 +42,7 @@ input[type="password"] {
 button {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #4caf50;
+    background-color: #4d8dd5;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -51,5 +51,5 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #0022ff;
 }
